--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,3 +9,31 @@
 }
 
 
+$primary-color: #1d913e;
+$text-color: #333;
+$bg-light: #f8f9fa;
+$border-radius: 8px;
+
+
+body {
+  background-color: $bg-light;
+}
+
+.header {
+  background-color: $primary-color;
+  padding: 1rem;
+  color: white;
+}
+
+.main {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 2rem;
+
+  h1 {
+    text-align: center;
+    margin-bottom: 2rem;
+    color: $text-color;
+  }
+}
+
