--- a/src/css/main.css
+++ b/src/css/main.css
@@ -122,6 +122,15 @@ body {
   }
 }
 
+.product-card.selected {
+  background-color: rgb(190, 222, 216);
+}
+
+.product-card.selected h3,
+.product-card.selected .js-price-card {
+  color: #155724;
+}
+
 .addProduct {
   width: 100%;
   padding: 0.6rem;
